<?xml version="1.0"?>
<package format="2">
  <name>stop_on_blue</name>
  <version>0.0.0</version>
  <description>The stop_on_blue package</description>

  <maintainer email="cchung@ltu.edu">CJ</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <!-- Add image processing & dynamic reconfigure dependencies -->
  <!-- <depend> ...  </depend> -->
  <!-- YOUR CODE HERE -->

  <export>
  </export>
</package>
